introduce junit test framework